--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
-    <title>Wassim Dallali - Full Stack Developer Portfolio | React, TypeScript, DevOps Expert in Sfax, Tunisia</title>
-    <meta name="title" content="Wassim Dallali - Full Stack Developer Portfolio | React, TypeScript, DevOps Expert" />
-    <meta name="description" content="Wassim Dallali is a Full Stack Developer based in Sfax, Tunisia. Expert in React, TypeScript, Node.js, and Cloud Computing. Experience in web and mobile development, DevOps, and network design. NASA Space Apps 2023 Global Finalist." />
+    <title>Wassim Dallali | Full Stack Developer | Portfolio | Sfax, Tunisia</title>
+    <meta name="title" content="Wassim Dallali | Full Stack Developer | Portfolio | Sfax, Tunisia" />
+    <meta name="description" content="Wassim Dallali - Full Stack Developer from Sfax, Tunisia. Specializing in React, TypeScript, Node.js, Cloud Computing, and DevOps. NASA Space Apps 2023 Global Finalist. View portfolio, experience, and projects." />
     <meta name="keywords" content="Wassim Dallali, Wassim Dallali portfolio, Wassim Dallali developer, Wassim Dallali Sfax, Full Stack Developer, React Developer, TypeScript Developer, Node.js Developer, DevOps Engineer, Web Developer, Mobile Developer, Cloud Computing, Sfax Tunisia, Software Engineer, Frontend Developer, Backend Developer, React Native, Angular, MongoDB, AWS, Azure, Firebase, NASA Space Apps" />
     <meta name="author" content="Wassim Dallali" />
     <meta name="robots" content="index, follow" />
